syntax = "proto3";

package manabie.tom;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;
option go_package = "github.com/manabie-com/backend/pkg/genproto/tom;pb";

enum MessageType {
  // content in message is normal text
  MESSAGE_TYPE_TEXT = 0;
  // content in message must be image_url
  MESSAGE_TYPE_IMAGE = 1;
  // content in message must be video_url
  MESSAGE_TYPE_VIDEO = 2;
  /* content in message must be:
      - CODES_MESSAGE_TYPE_COACH_CHANGE
      - CODES_MESSAGE_TYPE_CREATED_SP
      - CODES_MESSAGE_TYPE_EDITED_SP
      - CODES_MESSAGE_TYPE_MARKED_AS_RESOLVED
      - CODES_MESSAGE_TYPE_QUESTION_SOLVED
      - CODES_MESSAGE_TYPE_QUESTION_DOUBT
      - CODES_MESSAGE_TYPE_MARKED_AS_INVALID
      - CODES_MESSAGE_TYPE_QUESTION_INVALID
      - CODES_MESSAGE_TYPE_QUESTION_NOT_INVALID
      - CODES_MESSAGE_TYPE_QUESTION_ARCHIVED
      - CODES_MESSAGE_TYPE_QUESTION_EXPIRED
      - CODES_MESSAGE_TYPE_RATED_ANSWER
      - CODES_MESSAGE_TYPE_TUTOR_JOINED
      - CODES_MESSAGE_TYPE_TUTOR_LEFT
      - CODES_MESSAGE_TYPE_RATE_LOVE
      - CODES_MESSAGE_TYPE_RATE_NEUTRAL
      - CODES_MESSAGE_TYPE_RATE_SAD
  */
  MESSAGE_TYPE_SYSTEM = 3;
  // content in message must be CODES_MESSAGE_TYPE_BTN_CREATE_SP
  MESSAGE_TYPE_BUTTON = 4;
  /* content in message must be:
      - CODES_MESSAGE_TYPE_EVT_FINISH_FIRST_LO
      - CODES_MESSAGE_TYPE_EVT_FINISH_FIRST_TOPIC
  */
  MESSAGE_TYPE_COACH_AUTO = 5;
  MESSAGE_TYPE_FILE = 6;
}

enum MessageStatus {
  MESSAGE_STATUS_NEW = 0;
  MESSAGE_STATUS_READ = 1;
}

enum CodesMessageType {
  CODES_MESSAGE_TYPE_COACH_CHANGE = 0 [ deprecated = true ];
  CODES_MESSAGE_TYPE_CREATED_SP = 1;
  CODES_MESSAGE_TYPE_EDITED_SP = 2;
  CODES_MESSAGE_TYPE_BTN_CREATE_SP = 3;
  CODES_MESSAGE_TYPE_MARKED_AS_RESOLVED = 4;
  CODES_MESSAGE_TYPE_QUESTION_SOLVED = 5;
  CODES_MESSAGE_TYPE_QUESTION_DOUBT = 6;
  CODES_MESSAGE_TYPE_QUESTION_EXPIRED_SOLVED = 7;
  CODES_MESSAGE_TYPE_MARKED_AS_INVALID = 8;
  CODES_MESSAGE_TYPE_QUESTION_INVALID = 9;
  CODES_MESSAGE_TYPE_QUESTION_NOT_INVALID = 10;
  CODES_MESSAGE_TYPE_QUESTION_ARCHIVED = 11;
  CODES_MESSAGE_TYPE_QUESTION_EXPIRED = 12;
  CODES_MESSAGE_TYPE_RATED_ANSWER = 13;
  CODES_MESSAGE_TYPE_TUTOR_JOINED = 14;
  CODES_MESSAGE_TYPE_TUTOR_LEFT = 15;
  // for rating
  CODES_MESSAGE_TYPE_RATE_LOVE = 16;
  CODES_MESSAGE_TYPE_RATE_NEUTRAL = 17;
  CODES_MESSAGE_TYPE_RATE_SAD = 18;
  // for coach auto
  CODES_MESSAGE_TYPE_EVT_FINISH_FIRST_LO = 19;
  CODES_MESSAGE_TYPE_EVT_FINISH_FIRST_TOPIC = 20;
  // class room
  CODES_MESSAGE_TYPE_CREATED_CLASS = 21;
  CODES_MESSAGE_JOINED_CLASS = 22;
  CODES_MESSAGE_LEFT_CLASS = 23;
  CODES_MESSAGE_REMOVED_FROM_CLASS = 24;
  // lesson room
  CODES_MESSAGE_TYPE_JOINED_LESSON = 25;
  CODES_MESSAGE_TYPE_LEFT_LESSON = 26;
  CODES_MESSAGE_TYPE_RAISED_HAND = 27;

  CODES_MESSAGE_TYPE_ALLOW_STUDENT_TO_SPEAK = 28;
  CODES_MESSAGE_TYPE_PROHIBIT_STUDENT_TO_SPEAK = 29;

  CODES_MESSAGE_TYPE_ALLOW_STUDENT_TO_CHAT = 30;
  CODES_MESSAGE_TYPE_PROHIBIT_STUDENT_TO_CHAT = 31;

  CODES_MESSAGE_TYPE_PUT_HAND_DOWN = 32;
  CODES_MESSAGE_TYPE_STUDENT_ACCEPT_TO_SPEAK = 33;
  CODES_MESSAGE_TYPE_STUDENT_DECLINE_TO_SPEAK = 34;

  CODES_MESSAGE_TYPE_END_LIVE_LESSON = 35;

  // Student, Parent conversation
  CODES_MESSAGE_TYPE_CREATED_CONVERSATION = 42;
  CODES_MESSAGE_TYPE_JOINED_CONVERSATION = 43;

  CODES_MESSAGE_TYPE_SEEN_CONVERSATION = 44;
  CODES_MESSAGE_TYPE_LEAVE_CONVERSATION = 45;
  CODES_MESSAGE_TYPE_USER_ADDED_TO_CONVERSATION = 46;
}

enum ConversationStatus {
  CONVERSATION_STATUS_NONE = 0;
  CONVERSATION_STATUS_CLOSE = 1;
}

enum ConversationType {
  CONVERSATION_CLASS = 0;
  CONVERSATION_QUESTION = 1;
  CONVERSATION_COACH = 2 [ deprecated = true ];
  CONVERSATION_LESSON = 3;
  CONVERSATION_STUDENT = 4;
  CONVERSATION_PARENT = 5;
  CONVERSATION_LESSON_PRIVATE = 6;
}

enum ConversationEventType {
  CONVERSATION_EVENT_TYPE_NONE = 0;
  CONVERSATION_EVENT_TYPE_STUDENT_HAND_EVENT = 1;
  CONVERSATION_EVENT_TYPE_ALLOW_PROHIBIT_TO_SPEAK = 2;
  CONVERSATION_EVENT_TYPE_TEACHER_CREATE_POOL = 3;
  CONVERSATION_EVENT_TYPE_STUDENT_ANSWER_POOL = 4;
  CONVERSATION_EVENT_TYPE_ACCEPT_DECLINE_TO_SPEAK = 5;
}

enum ConversationEventStatus {
  CONVERSATION_EVENT_STATUS_NONE = 0;
  CONVERSATION_EVENT_STATUS_STUDENT_RAISE_HAND = 1;
  CONVERSATION_EVENT_STATUS_STUDENT_PUT_HAND_DOWN = 2;
  CONVERSATION_EVENT_STATUS_POOL_OPEN = 3;
  CONVERSATION_EVENT_STATUS_POOL_CLOSE = 4;
  CONVERSATION_EVENT_STATUS_STUDENT_ALLOW_TO_SPEAK = 5;
  CONVERSATION_EVENT_STATUS_STUDENT_PROHIBIT_TO_SPEAK = 6;
  CONVERSATION_EVENT_STATUS_STUDENT_ACCEPT_TO_SPEAK = 7;
  CONVERSATION_EVENT_STATUS_STUDENT_DECLINE_TO_SPEAK = 8;
}
